# emo

./: CLAUDE.md  Cargo.toml  README.md  default_config.json  models.json
.github/workflows/: release.yaml  test.yaml
scripts/test/: test_model_selection.sh
src/: ai.rs  error.rs  lib.rs  main.rs  models.rs
src/generators/: mod.rs
tests/: ai_llm_v2.rs  ai_sentence_consistency.rs  cli_integration.rs  default_config.rs  generators.rs  memo_generator.rs  model_fetching.rs  model_management.rs  model_selection.rs
