[package]
name = "emo"
version = "2.2.0"
edition = "2021"

[lib]
name = "emo"
path = "src/lib.rs"

[[bin]]
name = "emo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
llama_cpp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "stream"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
proptest = "1.4"
